<resources>
    <string name="app_name">Atividade 5</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="autor">Autor</string>
    <string name="alunos">Alunos</string>
    <string name="biografia">Biografia</string>
    <string name="leandro">Leandro Fabri</string>
    <string name="leandro_biografia">Vacilão desde a concepção, nasci em São Paulo e sempre gostei bastante de tecnologia e tudo o que a envolve, desde pequeno desmontando as coisas para entender como funcionavam, posso dizer que estou seguindo na área que gosto</string>

    <string name="leonardo">Leonardo Davidiuk</string>
    <string name="leonardo_biografia">Leonardo Davidiuk, nascido em São Paulo sempre tive interesse em tecnologia. Ingressei em Sistemas de Informação em 2017 na Unicamp. Hoje faço estágio com desenvolvimento front end</string>
    <string name="mail">Mail</string>

    <string name="nome_description">Imagem do Aluno</string>
    <string name="idade">%d anos</string>
    <string name="nome">Nome</string>

    <string-array name="nomes">
        <item>Arthur Briganti Gini,20,1</item>
        <item>Arthur Guedes De Souza,21,0</item>
        <item>Brenda Cristina De Souza Silva,0,1</item>
        <item>Bruno Adegas,20,2</item>
        <item>Bruno Rossetto Pereira,22,1</item>
        <item>Cleyvesson Gomes Da Silva,26,1</item>
        <item>Cristiano José Furlan,19,2</item>
        <item>Danielle Andrade,24,1</item>
        <item>Felipe Vieira Conti,0,0</item>
        <item>Gabriel Velasco Fernandes,22,0</item>
        <item>Henrique Augusto Rocha Oliveira,21,0</item>
        <item>Igor Da Silva Gouvea,22,0</item>
        <item>João Gabriel De Oliveira,20,0</item>
        <item>João Vitor Dalkmin Basso,20,0</item>
        <item>Juliana Pinho Marchi,20,0</item>
        <item>Katherine dos Santos Rocha,0,0</item>
        <item>Kauan Da Silva,19,0</item>
        <item>Laura Margaritelli Young Moreira,0,0</item>
        <item>Leandro Augusto Fabri Pereira,23,0</item>
        <item>Leonardo Henrique Furone,0,0</item>
        <item>Letícia Sousa De Oliveira,20,0</item>
        <item>Lorenzo Chaves Vilas Boas,0,0</item>
        <item>Marcelo Laendle Junior,20,0</item>
        <item>Mariana Ramos Dos Santos,21,0</item>
        <item>Mateus Soraggi Battagin,20,0</item>
        <item>Matheus Rosisca Padovani,0,0</item>
        <item>Renan Felipe Maziero,0,0</item>
        <item>Samuel Lahr Azorli,21,0</item>
        <item>Verussa De Alencar Caridi,0,0</item>
        <item>Vinícius Vilas Boas,20,0</item>
    </string-array>
</resources>
