<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linha"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    >

    <ImageView
        android:id="@+id/foto"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/nome_description"
        android:src="@drawable/pessoa_default"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        >

        <TextView
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textSize="11pt"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/idade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idade"
            android:textSize="8pt"
            />
    </LinearLayout>

</LinearLayout>