<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.unicamp.ft.l201039_l201253.atividade5.AlunosFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/adapter_layout">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/alunosFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_home_second"
        android:name="br.unicamp.ft.l201039_l201253.atividade5.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home"

            />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="br.unicamp.ft.l201039_l201253.atividade5.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="br.unicamp.ft.l201039_l201253.atividade5.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/biografiaFragment"
        android:name="br.unicamp.ft.l201039_l201253.atividade5.BiografiaFragment"
        android:label="fragment_biografia"
        tools:layout="@layout/fragment_biografia" />
    <fragment
        android:id="@+id/autorFragment"
        android:name="br.unicamp.ft.l201039_l201253.atividade5.AutorFragment"
        android:label="fragment_autor"
        tools:layout="@layout/fragment_autor" >
        <!--
        <action
            android:id="@+id/minhaAresta"
            app:destination="@id/nav_home_second" />
            -->
    </fragment>
    <fragment
        android:id="@+id/alunosFragment"
        android:name="br.unicamp.ft.l201039_l201253.atividade5.AlunosFragment"
        android:label="fragment_alunos"
        tools:layout="@layout/fragment_alunos" />
    <fragment
        android:id="@+id/mailFragment"
        android:name="br.unicamp.ft.l201039_l201253.atividade5.MailFragment"
        android:label="fragment_mail"
        tools:layout="@layout/fragment_mail" >
        <action
            android:id="@+id/minhaAresta"
            app:destination="@id/autorFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
</navigation>